--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
 
         .a1{
-            color: rgb(118, 115, 115);
+            color: rgb(35, 34, 34);
         }
         .b1{
             text-align: center;
@@ -104,12 +104,12 @@
 
       <div class="box1">
           <h2 class="b"><b>Virtual Human Controlled Interaction</b></h2>
-          <h3 class="a1"> The challenge is to develop a hands-free Human-Computer Interaction (HCI) system that enables amputees and individuals with limited hand mobility to
+          <p class="a1"> The challenge is to develop a hands-free Human-Computer Interaction (HCI) system that enables amputees and individuals with limited hand mobility to
             operate computers effectively. The system needs to accurately interpret eye movements and convert them into meaningful cursor.The "Virtual Human-Computer Interaction" project introduces an innovative system 
             combining facial landmark detection, mouse control, and virtual keyboard functionality.  Leveraging OpenCV, MediaPipe, Computer Vision, and PyAutoGUI, this project creates a 
             dynamic interface that enables users to interact with their computers using facial gestures.Facial landmark detection, powered by the MediaPipe Face Mesh, accurately tracks key points 
             on the user's face, allowing precise mouse cursor control. By analyzing the relative positions of facial landmarks, the system distinguishes between natural eye movements and intentional 
-            clicks, facilitating seamless and intuitive mouse control.</h3>
+            clicks, facilitating seamless and intuitive mouse control.</p>
       </div>
 
       <form>
